Remove status panel and improve progress bar animation

--- a/web/route.html
+++ b/web/route.html
@@ -40,11 +40,7 @@
 </div>
 
 <div id="panel">
-  <div id="results"><strong>Ergebnisliste</strong><div class="row">Noch keine Suche.</div></div>
-  <details id="statusWrap">
-    <summary>Status ▼</summary>
-    <div id="status"><strong>Status</strong> Bereit.</div>
-  </details>
+  <div id="results" class="hidden"><strong>Ergebnisliste</strong></div>
 </div>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
