--- a/web/route.html
+++ b/web/route.html
@@ -2,14 +2,14 @@
 <html lang="de">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Kleinanzeigen Routen-Suche</title>
+<title>Klanavo Routen-Suche</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
 <link rel="stylesheet" href="route.css">
 
 <body>
 
 <div class="app-header">
-  <h1>Kleinanzeigen Routensuche</h1>
+  <h1>Klanavo Routensuche</h1>
   <p>Berechne eine Route zwischen Start und Ziel, finde Inserate entlang der Strecke und sieh sie direkt auf der Karte.</p>
 </div>
 
