--- a/web/route.html
+++ b/web/route.html
@@ -8,30 +8,33 @@
 
 <body>
 
-<div class="app-header">
+<header class="app-header">
+  <div id="search-bar">
+    <div class="group suggest" id="grpStart">
+      <label for="start">Start</label>
+      <input id="start" placeholder="Adresse/Ort eingeben" autocomplete="off">
+      <ul id="start-suggest" hidden></ul>
+    </div>
+    <div class="group suggest" id="grpZiel">
+      <label for="ziel">Ziel</label>
+      <input id="ziel" placeholder="Adresse/Ort eingeben" autocomplete="off">
+      <ul id="ziel-suggest" hidden></ul>
+    </div>
+    <div class="group" id="grpQuery">
+      <label for="query">Suchbegriff</label>
+      <input id="query" placeholder="Suchbegriff">
+    </div>
+    <div class="group" id="grpRun">
+      <label>&nbsp;</label>
+      <button id="btnRun">Route berechnen &amp; suchen</button>
+    </div>
+    <div class="group hidden" id="grpReset">
+      <label>&nbsp;</label>
+      <button id="btnReset">Neue Suche</button>
+    </div>
+  </div>
   <h1>Klanavo Routensuche</h1>
   <p>Berechne eine Route zwischen Start und Ziel, finde Inserate entlang der Strecke und sieh sie direkt auf der Karte.</p>
-</div>
-
-<header>
-  <div class="group suggest" id="grpStart">
-    <label for="start">Start</label>
-    <input id="start" placeholder="Adresse/Ort eingeben" autocomplete="off">
-    <ul id="start-suggest" hidden></ul>
-  </div>
-  <div class="group suggest" id="grpZiel">
-    <label for="ziel">Ziel</label>
-    <input id="ziel" placeholder="Adresse/Ort eingeben" autocomplete="off">
-    <ul id="ziel-suggest" hidden></ul>
-  </div>
-  <div class="group" id="grpQuery">
-    <label for="query">Suchbegriff</label>
-    <input id="query" placeholder="Suchbegriff">
-  </div>
-  <div class="group" id="grpRun">
-    <label>&nbsp;</label>
-    <button id="btnRun">Route berechnen &amp; suchen</button>
-  </div>
 </header>
 
 <div id="map-box" class="hidden">
@@ -42,6 +45,10 @@
 <div id="panel">
   <div id="results" class="hidden"><strong>Ergebnisliste</strong></div>
 </div>
+
+<footer>
+  <p>Kontakt: <a id="contact-email"></a> | <a href="https://github.com/klanavo/ka-route" target="_blank" rel="noopener">GitHub</a></p>
+</footer>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script src="config.js"></script>
