--- a/web/route.html
+++ b/web/route.html
@@ -11,7 +11,7 @@
 
 <div class="app-header">
   <h1><img src="klanavo.png" alt="klanavo" class="logo"> klanavo</h1>
-  <p>Plane deine Route von Start bis Ziel, entdecke Inserate entlang der Strecke und klick dich durch die grünen Pins auf der Karte. Bei Problemen schreib uns an klanavo[at]zneb.to.</p>
+  <p>Plane deine Route von Start bis Ziel, entdecke Inserate entlang der Strecke und klick dich durch die grünen Pins auf der Karte. </br> Bei Problemen schreib uns an klanavo[at]zneb.to.</p>
 </div>
 
 <header>
