feat: add category and price filters

--- a/web/route.html
+++ b/web/route.html
@@ -29,6 +29,17 @@
     <label for="query">Suchbegriff</label>
     <input id="query" placeholder="Suchbegriff">
   </div>
+  <div class="group" id="grpCategory">
+    <label for="category">Kategorie</label>
+    <select id="category"></select>
+  </div>
+  <div class="group" id="grpPrice">
+    <label for="priceMin">Preis (€)</label>
+    <div class="price-range">
+      <input id="priceMin" type="number" placeholder="Von">
+      <input id="priceMax" type="number" placeholder="Bis">
+    </div>
+  </div>
   <div class="group" id="grpSettings">
     <details>
       <summary>⚙ Einstellungen</summary>
