Remove leftover preview-list comment

--- a/web/route.html
+++ b/web/route.html
@@ -34,10 +34,7 @@
   <div class="group" id="grpQuery">
     <label for="query">Suchbegriff</label>
     <input id="query" placeholder="Suchbegriff" required>
-  </div>
-  <div class="group" id="grpCategory">
-    <label for="category">Kategorie</label>
-    <select id="category"></select>
+    <div id="queryWarn" class="warn hidden">Bitte Suchbegriff eingeben.</div>
   </div>
   <div class="group" id="grpSettings">
     <details>
