--- a/web/route.html
+++ b/web/route.html
@@ -10,8 +10,8 @@
 <body>
 <div class="app-header">
   <h1><img src="klanavo.png" alt="klanavo" class="logo"> klanavo</h1>
-  <p>Plane deine Route von Start bis Ziel, entdecke Inserate entlang der Strecke und klick dich durch die grünen Pins auf der Karte.</br> Kontakt jederzeit über Telegram  <a href="https://t.me/+MZ4FoLzpqDlkNWYy" target="_blank" rel="noopener" title="Telegram">
-    <svg viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" fill="currentColor">
+  <p>Plane deine Route von Start bis Ziel, entdecke Inserate entlang der Strecke und klick dich durch die grünen Pins auf der Karte.</br> Kontakt / Feedback / Probleme bitte über Telegram <a href="https://t.me/+MZ4FoLzpqDlkNWYy" target="_blank" rel="noopener" title="Telegram">
+    <svg viewBox="0 0 24 24" width="12" height="12" aria-hidden="true" fill="currentColor">
       <path d="M9.04 15.56 8.86 21c.4 0 .58-.17.8-.38l3.3-3.16 6.84 5.02c1.25.69 2.16.33 2.5-1.16L24 3.6 24 .74c-.38-.97-1.38-.68-2.3-.34L1.32 9.5c-1 .4-.99.95-.18 1.2l6.35 1.98 14.7-9.28-13.15 12.16z"/>
     </svg>
   </a></p>
