Remove env search defaults and improve UI controls

--- a/web/route.html
+++ b/web/route.html
@@ -87,8 +87,11 @@
         </div>
       </div>
       <div class="sort-icons">
-        <button id="toggleGrouping" title="Nach Ort gruppieren">📍</button>
-        <button id="sortPrice" data-dir="asc" title="Nach Preis sortieren">€</button>
+        <div class="sort-label">Gruppieren / Sortieren</div>
+        <div class="icon-buttons">
+          <button id="toggleGrouping" title="Nach Ort gruppieren">📍</button>
+          <button id="sortPrice" data-dir="asc" title="Nach Preis sortieren">€</button>
+        </div>
       </div>
     </div>
     <div id="resultGallery" class="gallery"></div>
